# autoMETAte

./: .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  software_metadata_template.toml
src/auto_meta/: basics.py  cli.py  optionals.py
src/auto_meta/data/: software_metadata_template.toml
