[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
name = "autometate"
version = "0.1.1"
description = "Automation of metadata production for software"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Charlie G", email = "c.c.greene@vu.nl"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python"
]
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.50",
    "gputil>=1.4.0",
    "pre-commit>=4.2.0",
    "psutil>=7.0.0",
    "ruff>=0.11.8",
    "tomlkit>=0.15.0",
]

[tool.ruff]
line-length = 79                 # Line length for formatting
target-version = "py311"         # Target Python version

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
fixable = ["ALL"]           # Allow automatic fixes for all fixable issues
ignore = []                 # Example of ignoring specific rules
# Any lint rule can be ignored by adding a "# noqa" comment to the line in question


[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79
